Novo padrao oi encerramento
Modificado de acordo com o novo padrao da mascara de encerramento oi

--- a/index.html
+++ b/index.html
@@ -151,12 +151,12 @@
                                     <div class="level-left">
 
                                         <!-- select -->
-                                        <div class="select is-small">
+                                        <!-- <div class="select is-small">
                                             <select id="falha">
                                             <option value="Inoperante" selected>Inoperante</option>
                                             <option value="BaixoDesempenho">Baixo Desempenho</option>
                                         </select>
-                                        </div>
+                                        </div> -->
                                         <!-- select -->
 
                                     </div>
@@ -186,6 +186,21 @@
 
                                 <div class="control has-icons-left has-icons-right">
                                     <input id="dataAbertura" class="input is-small" type="text" placeholder="--/--/---- --:--:--">
+                                    <span class="icon is-small is-left">
+                                        <i class="fas fa-calendar-minus"></i>
+                                    </span>
+                                </div>
+
+                            </div>
+                            <!-- data de abertura -->
+
+                            <!-- data de abertura -->
+                            <div class="field">
+
+                                <label class="label is-small">Data do encerramento</label>
+
+                                <div class="control has-icons-left has-icons-right">
+                                    <input id="dataEncerramento" class="input is-small" type="text" placeholder="--/--/---- --:--:--">
                                     <span class="icon is-small is-left">
                                         <i class="fas fa-calendar-minus"></i>
                                     </span>
@@ -295,11 +310,28 @@
                                         Residente
                                     </label>
 
+                                    <label class="radio">
+                                        <input type="radio" name="radioValidacao" value="2">
+                                        CGS
+                                    </label>
+
                                 </div>
                                 <!-- /Radio buttons -->
 
                             </div>
                             <!-- Campo validação e radio buttons -->
+
+                            <!-- campo telefone -->
+                            <div class="field">
+                                <label class="label is-small">Telefone</label>
+                                <div class="control has-icons-left has-icons-right">
+                                    <input id="telefone" class="input is-small" type="text" placeholder="DDD NUMERO">
+                                    <span class="icon is-small is-left">
+                                <i class="fas fa-headset"></i>
+                            </span>
+                                </div>
+                            </div>
+                            <!-- /campo telefone -->
 
                             <!-- senha -->
                             <div class="field">
@@ -453,7 +485,7 @@
                     <!-- BLOCO DIREITO -->
                     <div class="tile is-parent">
                         <div class="tile is-child">
-                            <div class="field">
+                            <!-- <div class="field">
 
                                 <label class="checkbox" style="margin-top: 10px; margin-bottom: 20px;">
                                     <input id="checkboxAguardandoValidacao" value="agudandoValidacao" type="checkbox">
@@ -499,12 +531,12 @@
 
                                 </div>
 
-                                <div class="field">
-                                    <a href="https://gabbamendonca.github.io/apps-oi/encerramento">
-                                        <button class="button is-link is-light">Códigos de Encerramento R2</button>
-                                    </a>
-                                </div>
+                            </div> -->
 
+                            <div class="field">
+                                <a href="https://gabbamendonca.github.io/apps-oi/encerramento">
+                                    <button class="button is-link is-light">Códigos de Encerramento R2</button>
+                                </a>
                             </div>
                         </div>
                     </div>
