Corrigindo linhas erradas da mascara de encerramento

--- a/index.html
+++ b/index.html
@@ -485,7 +485,7 @@
                     <!-- BLOCO DIREITO -->
                     <div class="tile is-parent">
                         <div class="tile is-child">
-                            <!-- <div class="field">
+                            <div class="field">
 
                                 <label class="checkbox" style="margin-top: 10px; margin-bottom: 20px;">
                                     <input id="checkboxAguardandoValidacao" value="agudandoValidacao" type="checkbox">
@@ -531,7 +531,7 @@
 
                                 </div>
 
-                            </div> -->
+                            </div>
 
                             <div class="field">
                                 <a href="https://gabbamendonca.github.io/apps-oi/encerramento">
@@ -777,7 +777,7 @@
                                     </label>
 
                                     <label class="radio">
-                                    <input type="radio" name="abTs" value="2">
+                                    <input type="radio" name="abTs" value="2" disabled>
                                     Sem Sucesso
                                     </label>
                                 </div>
