--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <script defer src="https://use.fontawesome.com/releases/v5.14.0/js/all.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="assets/css/styles.css">
 
     <title>Apps OI</title>
 </head>
@@ -1250,12 +1250,14 @@
 
     <!-- /FOOTER -->
 
-    <script src="abertura.js"></script>
-    <script src="encerramento.js"></script>
-    <script src="email.js"></script>
-    <script src="modal.js"></script>
-    <script src="editor.js"></script>
-    <script src="utilidade.js"></script>
+    <script src="assets/js/abertura.js"></script>
+    <script src="assets/js/encerramento.js"></script>
+    <script src="assets/js/email.js"></script>
+    <script src="assets/js/modal.js"></script>
+    <script src="assets/js/editor.js"></script>
+    <script src="assets/js/utilidade.js"></script>
+    <!-- <script src="test.js"></script> -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js" integrity="sha512-qTXRIMyZIFb8iQcfjXWCO8+M5Tbc38Qi5WzdPOYZHIlZpzBHG3L3by84BBBOiRGiEb7KKtAOAs5qYdUiZiQNNQ==" crossorigin="anonymous"></script>
 
     <script>
         function abertura() {
