Corrigidos algumas linhas de informações

--- a/index.html
+++ b/index.html
@@ -561,10 +561,19 @@
                             <!-- /Card Mensagens Instantâneas -->
 
 
-                            <div class="field">
-                                <a href="https://gabbamendonca.github.io/apps-oi/encerramento">
-                                    <button class="button is-link is-light">Códigos de Encerramento R2</button>
-                                </a>
+                            <!-- Card Codigos de encerramento -->
+                            <div class="card my-card">
+                                <div class="card-content">
+                                    <div class="content">
+
+                                        <div class="field">
+                                            <a href="https://gabbamendonca.github.io/apps-oi/encerramento">
+                                                <button class="button is-small is-link is-fullwidth">Códigos de Encerramento R2</button>
+                                            </a>
+                                        </div>
+
+                                    </div>
+                                </div>
                             </div>
 
                         </div>
@@ -1006,7 +1015,9 @@
                 <div class="columns">
                     <div class="column is-4 is-offset-4">
 
-                        <label class="label">Assunto para Email</label>
+                        <label class="label">Assunto para Email<i class="fas fa-info-circle my-instruction"></i>
+                            <div class="my-hide">Esta sessão serve para fazer o assunto do e-mail de maneira rapida e padrão.</div>
+                        </label>
 
                         <div class="field">
                             <label class="label is-small">Cliente</label>
